# finance-tracker

./: categories.json  main.py  pyproject.toml
