[tool.poetry]
name = "finance-tracker"
version = "0.1.0"
description = "Tracker app to view the expenses (and incomes) based on Bank statements"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "finance_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.1"
pandas = "^2.2.3"
plotly = "^6.1.0"
numpy = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
